# Foodles-CLI

./: .gitignore  Cargo.toml  README.fr.md  README.md  cookies.toml
src/: fluent.rs  main.rs  model.rs
